--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -11,10 +11,15 @@
   list-style: none;
 }
 
-#home-button {
+#nav-bar-list > * {
   display: flex;
   justify-content: center;
 }
+
+/* #home-button {
+  display: flex;
+  justify-content: center;
+} */
 
 #home-button > * {
   margin: 0 auto;
@@ -39,8 +44,8 @@
 }
 
 #login-signup {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   grid-column-start: 3;
 }
 
@@ -55,4 +60,8 @@
 .login-signup > *:hover {
   color: var(--black2);
   box-shadow: 1px 2px 10px var(--black1);
+}
+
+#logout {
+  grid-column-start: 3;
 }
