--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -21,13 +21,10 @@
 #home-button > * {
   margin: 0 auto;
   width: fit-content;
-  font-size: 17px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
   font-weight: bold;
   transition: 0.2s;
-}
-
-#home-button > * > span {
-  font-size: 25px;
 }
 
 #home-button > *:hover {
@@ -41,8 +38,6 @@
 }
 
 #login-signup {
-  /* display: flex;
-  justify-content: center; */
   grid-column-start: 3;
 }
 
@@ -56,7 +51,7 @@
 
 .login-signup > *:hover {
   color: var(--wildCard);
-  box-shadow: 1px 2px 10px var(--black1);
+  box-shadow: 1px 2px 10px var(--black2);
 }
 
 #logout {
