--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,4 +1,3 @@
-/* TODO Add site wide styles */
 :root {
   --black1: #242124;
   --black2: #232B2B;
@@ -18,11 +17,11 @@
 }
 
 html {
-  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   font-family: 'Poppins', sans-serif;
   font-size: 15px;
   color: var(--pinkWhite);
   height: 100vh;
+  overflow-y: overlay;
 }
 
 body {
@@ -31,4 +30,25 @@ body {
   height: 100%;
   min-height: 100%;
   background-color: var(--outerspace);
+}
+
+/* CUSTOM SCROLLBAR */
+::-webkit-scrollbar {
+  width: 15px;
+  position: absolute;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--black2);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--pinkWhite);
+  border-radius: 20px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--wildCard);
 }
