removed navbar and added background image to auth forms

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -5,7 +5,7 @@
 
 .home-img-container {
   height: 50vh;
-  background-image: url('../../images/nebulae-home-1.jpg');
+  background-image: url('../../images/home-background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
