--- a/react-app/src/components/auth/AuthForm.css
+++ b/react-app/src/components/auth/AuthForm.css
@@ -1,9 +1,3 @@
-.auth-form-container {
-  display: flex;
-  justify-content: center;
-  margin: 10vh 0;
-}
-
 .auth-form-inner {
   display: grid;
   grid-template-columns: 1fr 1.75fr;
@@ -81,4 +75,15 @@
   font-size: 13px;
   font-style: italic;
   color: var(--accentLight);
+}
+
+.auth-form-outer {
+  background: url('../../images/auth-background.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
