--- a/react-app/src/components/auth/LogoutButton.css
+++ b/react-app/src/components/auth/LogoutButton.css
@@ -2,6 +2,7 @@
   border: none;
   background: none;
   color: var(--white1);
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   font-weight: bold;
   transition: 0.2s;
