--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -58,26 +58,40 @@
   grid-column-start: 3;
 }
 
-#servers-container {
+/* #servers-container {
   margin: 0 auto;
   max-width: 75%;
   padding-bottom: 25px;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  /* overflow-x: scroll; */
-}
-
-/* #servers-container > * {
-  text-decoration: none;
-  margin: 0 20px;
-  font-family: 'Poppins', sans-serif;
-  font-size: 15px;
-
-  color: var(--pinkWhite);
-  transition: 0.2s;
-}
-
-#servers-container > *:hover {
-  color: var(--wildCard);
 } */
+
+#servers-container {
+  margin: 0 auto;
+  max-width: 75%;
+}
+
+#servers-scrollable {
+  display: flex;
+  justify-content: center;
+  overflow-x: scroll;
+}
+
+#servers-scrollable > * {
+  flex-shrink: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: center;
+  width: 10%;
+  margin-bottom: 10px;
+}
+
+#servers-scrollable::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+#servers-scrollable::-webkit-scrollbar-thumb {
+  border: 6px solid transparent;
+}
