--- a/react-app/src/components/Servers/Servers.css
+++ b/react-app/src/components/Servers/Servers.css
@@ -7,8 +7,22 @@
   transition: 0.2s;
 }
 
-.server-links:hover {
+.server-links-new {
+  border: none;
+  background: none;
+  padding: none;
+
+  margin: 0 20px;
+  color: var(--pinkWhite);
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  transition: 0.2s;
+}
+
+.server-links:hover,
+.server-links-new:hover {
   color: var(--wildCard);
+  cursor: pointer;
 }
 
 .selected {
