--- a/react-app/src/components/AddServerForm/AddServerForm.css
+++ b/react-app/src/components/AddServerForm/AddServerForm.css
@@ -76,3 +76,20 @@
   font-style: italic;
   color: var(--accentLight);
 }
+
+.invite-example {
+  text-align: start;
+  display: grid;
+  grid-template-rows: 0.5fr 1fr;
+}
+
+.invite-example > ul {
+  list-style: none;
+  margin: 0;
+  margin-bottom: 20px;
+  padding: 0;
+}
+
+.invite-example > ul > li {
+  font-size: 13px;
+}
