--- a/react-app/src/components/Servers/Servers.css
+++ b/react-app/src/components/Servers/Servers.css
@@ -28,3 +28,49 @@
 .selected {
   color: var(--wildCard);
 }
+
+.panel-details-button {
+  background: none;
+  border: none;
+  padding: 0;
+
+  color: var(--pinkWhite);
+  transition: 0.2s;
+  height: fit-content;
+}
+
+.panel-details-button:hover {
+  color: var(--wildCard);
+  cursor: pointer;
+}
+
+#panel-container {
+  position: absolute;
+  background-color: var(--black2);
+  padding: 20px;
+  border-radius: 10px;
+  width: 10%;
+  top: 25vh;
+}
+
+#panel-header {
+  font-weight: bold;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid var(--pinkWhite);
+}
+
+.panel-inner-button {
+  border: none;
+  background: none;
+  padding: 0;
+
+  color: var(--pinkWhite);
+  font-size: 13px;
+  transition: 0.2s;
+}
+
+.panel-inner-button:hover {
+  cursor: pointer;
+  color: var(--wildCard);
+}
