--- a/react-app/src/components/Channels/Channels.css
+++ b/react-app/src/components/Channels/Channels.css
@@ -20,3 +20,37 @@
 #channels-panel-header {
   font-size: 25px;
 }
+
+#channels-list > * {
+  margin: 20px 0;
+}
+
+#channels-list > button {
+
+}
+
+#channels-list-header {
+  font-size: 17px;
+}
+
+.list-channel {
+  display: flex;
+  justify-content: space-between;
+}
+
+.list-channel > button,
+#channels-list > button {
+  border: none;
+  background: none;
+  padding: 0;
+
+  color: var(--pinkWhite);
+  font-size: 15px;
+  transition: 0.2s;
+}
+
+.list-channel > button:hover,
+#channels-list > button:hover {
+  cursor: pointer;
+  color: var(--wildCard);
+}
