added styles to chat

--- a/react-app/src/components/Channels/Channels.css
+++ b/react-app/src/components/Channels/Channels.css
@@ -1,6 +1,8 @@
 #channels-container {
   display: grid;
   grid-template-columns: 1fr 5fr;
+
+  height: calc(1041.6px - 179.2px);
 }
 
 #channels-panel {
