updated edit channel form to say planet

--- a/react-app/src/components/AddServerForm/AddServerForm.css
+++ b/react-app/src/components/AddServerForm/AddServerForm.css
@@ -75,6 +75,10 @@
   height: 100px;
 }
 
+.server-textarea-container > textarea:focus-visible {
+  outline: 2px solid var(--wildCard);
+}
+
 .server-button {
   width: 100%;
   padding: 10px;
